<resources>
    <string name="app_name">Vendor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_hone_screen">HoneScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="myAppPreference"></string>
    <string name="my_income">MY INCOME</string>
    <string name="today">Today</string>
    <string name="this_month">This Month</string>
    <string name="all">All</string>
    <string name="sort_by">Sort By-</string>
    <string name="rs">Rs</string>
    <string name="shared_preference_key">com.example.vendor.vendorDetails</string>
    <string name="vendor_phone_key">vendor_phone</string>
    <string name="vendor_name_key">vendor_name</string>
    <string name="vendor_id_key">vendor_id</string>
    <string name="vendor_found_key">vendor_found</string>
    <string name="vendor_image_key">vendor_image</string>
    <string name="vendor_active_status_key">vendor_active_status</string>
    <string name="vendor_city_key">vendor_city</string>
    <string name="vendor_address_key">vendor_address</string>
</resources>
