<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/income_toolbar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#ffffff"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="6"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:weightSum="10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/my_income"
                    android:textColor="#000000"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/sort_by"
                    android:textColor="#078ef5"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/income_todayLy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:id="@+id/income_todayTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/today"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/income_monthLy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/income_monthTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/this_month"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/income_allLy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <TextView
                        android:id="@+id/income_allTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/all"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

</LinearLayout>